[package]
name = "nixgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nixgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.9", features =  ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.3"
log = "0.4.22"
directories = "5.0.1"
jiff = "0.1.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
regex = "1.10.6"
once_cell = "1.19.0"
gix = "0.64.0"
petname = "2.0.2"
